[tool.poetry]
name = "streamlit-flower-classification"
version = "0.1.0"
description = ""
authors = ["Nam Thai <nam.thai.dev@outlook.com>"]
readme = "README.md"
packages = [{include = "streamlit_flower_classification"}]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.2.0"
streamlit = "^1.22.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
