[tool.poetry]
name = "streamlit-flower-classification"
version = "0.1.0"
description = ""
authors = ["Nam Thai <nam.thai.dev@outlook.com>"]
readme = "README.md"
packages = [{include = "streamlit_flower_classification"}]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^0.14.1"
streamlit = "^1.7.0"
scikit-learn = "^0.23.1"
pandas = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
